Sync the contact page

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -15,19 +15,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
+<script>(function(d, s, id) {
+ 		  var js, fjs = d.getElementsByTagName(s)[0];
+ 		  if (d.getElementById(id)) return;
+ 		  js = d.createElement(s); js.id = id;
+ 		  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10&appId=190532464351842";
+ 		  fjs.parentNode.insertBefore(js, fjs);
+ 		}(document, 'script', 'facebook-jssdk'));
+</script>
 </head>
 
 <body>
-		<!-- Facebook library, recommended to put it right after body-->
-		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10&appId=190532464351842";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));</script>
-		
     <div>
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
@@ -63,15 +61,14 @@
                     <p class="lead"><img src="../assets/img/logo_facebook.png" style="width:50px;margin:0px;margin-right:10px;margin-left:0px;"><img src="../assets/img/logo_insta.png" style="width:50px;"></p>
                 </div>
                 <div class="col-lg-4 col-md-5">
-                    <div class="contact-clean" style="padding-bottom:0px;background-color:#ffffff;padding-top:0px;"></div>
-                        <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;"><strong>CONTACT</strong></h2>
-                        <p class="lead" style="font-size:14px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please comment below. </p>
-                        <div class="form-group has-success has-feedback">
-                        		<div class="fb-comments" data-href="http://kbce.org.uk" data-numposts="5"></div>
-                        </div>
-            		</div>
-        		</div>
-    		</div>
+                    <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:Armata, sans-serif;"><strong>CONTACT</strong></h2>
+                    <p class="lead" style="font-size:14px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
+                    <div class="form-group has-success has-feedback">
+    <div class="fb-comments" data-href="http://kbce.org.uk" data-width="100%" data-numposts="5"></div>
+</div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <h5>© 2017 <span style="color:#eb4221"><b>KBCE</b></span> All right reserved</h5></footer>
@@ -79,6 +76,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
+    <script src="../assets/js/script.min.js"></script>
 </body>
 
 </html>
