Update the festival page

--- a/festival/festival.html
+++ b/festival/festival.html
@@ -52,30 +52,29 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
+                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1">
                     <div class="toc"><img class="img-responsive" src="../assets/img/festival/festival_poster.jpg" width="inherit" height="inherit"></div>
                 </div>
-                <div class="col-lg-6 col-md-7 col-sm-9">
+                <div class="col-lg-4 col-md-5">
                     <div class="text">
-                        <p>Following the great success of last year’s Autumn Full Moon Festival, Kingston Korean Festival 2017 returns to Kingston where the biggest Korean community in Europe is based. This year, Kingston Korean Festival runs two main programmes
+                        <p style="font-size:12px;">Following the great success of last year’s Autumn Full Moon Festival, Kingston Korean Festival 2017 returns to Kingston where the biggest Korean community in Europe is based. This year, Kingston Korean Festival runs two main programmes
                             to celebrate Korean culture and to engage with local people in many ways.&nbsp; Experience how Koreans are celebrating its first birthday at the Kingston Museum. Come and enjoy community Fest at the market place! Try Korean
                             food and watch performances, such K-Dances, K-Music and Hapkido featuring by Koreans and Locals artists uniting together to give an outstanding show.
                             <br/>Kingston Korean Festival presents something new, unexpected and exciting community event that Korean community would like to welcome everyone to experience Korean culture so we can better understand
                             each other and build a better Kingston together. There will be fundraising activities and events to support local causes.&nbsp;</p>
-                        <h2 style="margin-bottom:5px;"><strong>Exhibition | Kingston Museum, Kingston</strong> </h2>
-                        <p>‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea&nbsp;
+                        <h5 style="margin-bottom:5px;color:#127d2d;"><strong>Exhibition | Kingston Museum, Kingston</strong> </h5>
+                        <p style="font-size:12px;">‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea&nbsp;
                             <br/>31st August ~ 3rd&nbsp;October 2017 </p>
-                        <h2 style="margin-bottom:5px;"><strong>Community Fest | Ancient Market Place, Kingston</strong> </h2>
-                        <p>12:00~16:00, Sat 16th &nbsp;September 2017 </p>
-                        <p>Kingston Korean Festival welcomes everyone to celebrate and experience Korean culture! Enjoy fun and inclusive arts activities for free!
-                            <br/>This year, the festival runs two family oriented programmes, an Exhibition and a Community Fest which are something new, unexpected, exciting and authentic!
-                            <br/>It will be a great opportunity for everyone to learn from each other to build a better Kingston. There will be fundraising activities along with the festival to support the local causes.</p>
-                        <p>The Kingston Korean Festival is an annual festival of celebrating vibrant Korean culture in Kingston and providing some of the most varied entertainment and educational programme for everyone. </p>
+                        <h5 style="margin-bottom:5px;color:#127d2d;"><strong>Community Fest | Ancient Market Place, Kingston</strong> </h5>
+                        <p style="font-size:12px;">12:00~16:00, Sat 16th &nbsp;September 2017 </p>
                     </div>
                     <div>
-                        <p>Funded by RBK
-                            <br/>Produced by KBCE
-                            <br/><a href="http://www.kbce.org.uk/" target="_blank">www.kbce.org.uk</a></p><img src="../assets/img/logo_kk festival.png" style="width:75px;"><img src="../assets/img/logo_kingston.jpg" style="width:120px;height:150;"></div>
+                        <div style="width:50%; display:inline-block;">
+    <p>Funded by RBK
+        <br />Produced by KBCE
+        <br /><a href="http://www.kbce.org.uk/" target="_blank">www.kbce.org.uk</a>
+    </p>
+</div><img src="../assets/img/logo_kk festival.png" style="width:60px;"><img src="../assets/img/logo_kingston.jpg" style="width:90px;height:150;"></div>
                 </div>
             </div>
         </div>
