Change the default font to Open Sans

--- a/education/mystic.html
+++ b/education/mystic.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -49,7 +50,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="row" style="padding:0px;background-color:rgba(0,0,0,0.0980392);margin-bottom:10px;margin-top:10px;margin-left:0px;margin-right:0px;">
                         <div class="col-lg-12">
-                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><strong>MYSTIC NIGHTS DANCE WORKSHOPS</strong> </h3><small style="font-family:'Droid Sans', sans-serif;">June 30, 2017 | <a href="http://storyindesign.wixsite.com/kbce/blog/author/KBCE">KBCE</a> </small>
+                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><strong>MYSTIC NIGHTS DANCE WORKSHOPS</strong> </h3><small>June 30, 2017 | KBCE</small>
                             <p style="font-size:12px;"> </p><img class="img-responsive" src="../assets/img/education/education_01.jpg">
                             <p style="font-size:12px;"> </p>
                             <p style="font-size:12px;">We are aiming to bring you the latest dance choreographies from all the hottest groups like EXO and BLACKPINK. </p>
