--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -56,11 +57,11 @@
                     <h3 style="font-family:Armata, sans-serif;"><strong>BABY'S FIRST BIRTHDAY CELEBRATION IN KOREA </strong></h3></div>
                 <div class="col-lg-6 col-lg-offset-2 col-md-7 col-md-offset-1 col-sm-9">
                     <div class="text">
-                        <p>The Kingston Korean Festival begins with the exhibition, Dol, Baby’s First Birthday Celebration in Korea. </p>
-                        <p>The exhibition will show a set of beautiful Korean traditional dress for the one-year-old babies for boys and girls along with a table for ‘Doljabee’ ceremony. ‘Dol’ is the best kwon of the Korean birthday celebrations. It represents
+                        <p style="font-family:'Open Sans', sans-serif;">The Kingston Korean Festival begins with the exhibition, Dol, Baby’s First Birthday Celebration in Korea. </p>
+                        <p style="font-family:'Open Sans', sans-serif;">The exhibition will show a set of beautiful Korean traditional dress for the one-year-old babies for boys and girls along with a table for ‘Doljabee’ ceremony. ‘Dol’ is the best kwon of the Korean birthday celebrations. It represents
                             very unique and authentic Korean culture. ‘Doljabee’ ceremony is the main celebration of ‘Dol’. A table is prepared with a large spool of thread, a brush, a Korean calligraphy set, a book, money and a bow and arrow for boys
                             or a needle cushion or thimble for girls. Then the baby picks up one item from the table that attracts him or her. The item that the child picks up is said to predict the child’s future.&nbsp; </p>
-                        <p>A Korean traditional costume designer, Ms Hae Mi Lee has gratefully donated a set of Korean traditional dress to the Kingston Museum for better relationship between Korean and local people of Kingston. </p>
+                        <p style="font-family:'Open Sans', sans-serif;">A Korean traditional costume designer, Ms Hae Mi Lee has gratefully donated a set of Korean traditional dress to the Kingston Museum for better relationship between Korean and local people of Kingston. </p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-sm-3">
@@ -77,7 +78,7 @@
                 </div>
                 <div class="col-lg-6 col-md-7 col-sm-9">
                     <div class="text">
-                        <p>A designer, Ms Hae Mi&nbsp;Lee has donated a set of Korean traditional dress to the Kingston Museum to celebrate the occasion and to develop better relationship between Korean and local people of Kingston.&nbsp; </p>
+                        <p style="font-family:'Open Sans', sans-serif;">A designer, Ms Hae Mi&nbsp;Lee has donated a set of Korean traditional dress to the Kingston Museum to celebrate the occasion and to develop better relationship between Korean and local people of Kingston.&nbsp; </p>
                     </div>
                 </div>
             </div>
