--- a/education/education.html
+++ b/education/education.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -49,7 +50,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="row" style="padding:0px;background-color:rgba(0,0,0,0.0980392);margin-bottom:10px;margin-top:10px;margin-left:0px;margin-right:0px;">
                         <div class="col-lg-12">
-                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/hanbok.html">HANBOK </a></h3><small style="font-family:'Droid Sans', sans-serif;">July 7, 2017 | <a href="http://storyindesign.wixsite.com/kbce/blog/author/KBCE">KBCE</a> </small>
+                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/hanbok.html">HANBOK </a></h3><small>July 7, 2017 |&nbsp;KBCE</small>
                             <div class="row" style="margin-top:15px;margin-bottom:10px;">
                                 <div class="col-md-6">
                                     <p style="font-size:12px;">All is welcome, shapes and sizes to try on traditional Hanboks. For people who do not know what is a Korean hanbok: It is traditional grown originated from South Korea. Traditionally, people used to wear it every day,
@@ -65,10 +66,10 @@
                     </div>
                     <div class="row" style="padding:0px;margin:10px;background-color:rgba(0,0,0,0.0980392);margin-right:0px;margin-bottom:10px;margin-top:10px;margin-left:0px;">
                         <div class="col-md-12">
-                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/kimchi.html">KIMCHI </a></h3><small style="font-family:'Droid Sans', sans-serif;">July 1, 2017 | <a href="http://storyindesign.wixsite.com/kbce/blog/author/KBCE">KBCE</a> </small>
+                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/kimchi.html">KIMCHI </a></h3><small>July 1, 2017 |&nbsp;KBCE </small>
                             <div class="row" style="margin-top:15px;margin-bottom:10px;">
                                 <div class="col-md-6">
-                                    <p style="font-size:12px;"><strong>INGREDIENTS </strong>1 Chinese cabbage |&nbsp;1/4 cup sea salt or salt |&nbsp;1 tbs grated garlic (5 to 6 cloves) |&nbsp;1 tsp sugar |&nbsp;2 to 3 tbs of fish sauce |&nbsp;1 to 5 tbs Korean red pepper flakes
+                                    <p style="font-size:12px;font-family:'Open Sans', sans-serif;"><strong>INGREDIENTS </strong>1 Chinese cabbage |&nbsp;1/4 cup sea salt or salt |&nbsp;1 tbs grated garlic (5 to 6 cloves) |&nbsp;1 tsp sugar |&nbsp;2 to 3 tbs of fish sauce |&nbsp;1 to 5 tbs Korean red pepper flakes
                                         (gochugaru) |&nbsp;100g Mooli |&nbsp;4 spring onion, trimmed and cut into piece... </p>
                                     <div></div>
                                 </div>
@@ -81,7 +82,7 @@
                     </div>
                     <div class="row" style="padding:0px;margin:10px;background-color:rgba(0,0,0,0.0980392);margin-right:0px;margin-bottom:10px;margin-top:10px;margin-left:0px;">
                         <div class="col-md-12">
-                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/mystic.html">MYSTIC NIGHTS DANCE WORKSHOPS</a></h3><small style="font-family:'Droid Sans', sans-serif;">June 30, 2017 | <a href="http://storyindesign.wixsite.com/kbce/blog/author/KBCE">KBCE</a> </small>
+                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/mystic.html">MYSTIC NIGHTS DANCE WORKSHOPS</a></h3><small>June 30, 2017 |&nbsp;KBCE </small>
                             <div class="row" style="margin-top:15px;margin-bottom:10px;">
                                 <div class="col-md-6">
                                     <p style="font-size:12px;">We are aiming to bring you the latest dance choreographies from all the hottest groups like EXO and BLACKPINK. </p>
@@ -93,7 +94,7 @@
                     </div>
                     <div class="row" style="padding:0px;margin:10px;background-color:rgba(0,0,0,0.0980392);margin-right:0px;margin-bottom:10px;margin-top:10px;margin-left:0px;">
                         <div class="col-md-12">
-                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/martial.html">SCHOOL OF KOREAN MARTIAL ARTS</a></h3><small style="font-family:'Droid Sans', sans-serif;">June 30, 2017 | <a href="http://storyindesign.wixsite.com/kbce/blog/author/KBCE">KBCE</a> </small>
+                            <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/martial.html">SCHOOL OF KOREAN MARTIAL ARTS</a></h3><small>June 30, 2017 |&nbsp;KBCE&nbsp; </small>
                             <div class="row" style="margin-top:15px;margin-bottom:10px;">
                                 <div class="col-md-6">
                                     <p style="font-size:12px;">SKMA (School of Korean Martial Arts) is the authentic Korean Martial Arts School led by Korean Instructor, Master Daeman Sung (6th Dan Black belt and Ex Korean Special Forces). Our vast syllabus offers something for
