--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -54,32 +54,32 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3 style="font-family:Armata, sans-serif;"><strong>BABY'S FIRST BIRTHDAY CELEBRATION IN KOREA </strong></h3></div>
+                    <h3><strong>BABY'S FIRST BIRTHDAY CELEBRATION IN KOREA </strong></h3></div>
                 <div class="col-lg-6 col-lg-offset-2 col-md-7 col-md-offset-1 col-sm-9">
                     <div class="text">
-                        <p style="font-family:'Open Sans', sans-serif;">The Kingston Korean Festival begins with the exhibition, Dol, Baby’s First Birthday Celebration in Korea. </p>
-                        <p style="font-family:'Open Sans', sans-serif;">The exhibition will show a set of beautiful Korean traditional dress for the one-year-old babies for boys and girls along with a table for ‘Doljabee’ ceremony. ‘Dol’ is the best kwon of the Korean birthday celebrations. It represents
+                        <p>The Kingston Korean Festival begins with the exhibition, Dol, Baby’s First Birthday Celebration in Korea. </p>
+                        <p>The exhibition will show a set of beautiful Korean traditional dress for the one-year-old babies for boys and girls along with a table for ‘Doljabee’ ceremony. ‘Dol’ is the best kwon of the Korean birthday celebrations. It represents
                             very unique and authentic Korean culture. ‘Doljabee’ ceremony is the main celebration of ‘Dol’. A table is prepared with a large spool of thread, a brush, a Korean calligraphy set, a book, money and a bow and arrow for boys
                             or a needle cushion or thimble for girls. Then the baby picks up one item from the table that attracts him or her. The item that the child picks up is said to predict the child’s future.&nbsp; </p>
-                        <p style="font-family:'Open Sans', sans-serif;">A Korean traditional costume designer, Ms Hae Mi Lee has gratefully donated a set of Korean traditional dress to the Kingston Museum for better relationship between Korean and local people of Kingston. </p>
+                        <p>A Korean traditional costume designer, Ms Hae Mi Lee has gratefully donated a set of Korean traditional dress to the Kingston Museum for better relationship between Korean and local people of Kingston. </p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-sm-3">
                     <div class="toc">
-                        <figure><img class="img-responsive" src="../assets/img/exhibition.png"></figure>
+                        <figure><img class="img-responsive" src="../assets/img/exhibition_01.jpg"></figure>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3 style="font-family:Armata, sans-serif;"><strong>DESIGNER, HAE MI LEE</strong> </h3></div>
+                    <h3><strong>DESIGNER, HAE MI LEE </strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
-                    <div class="toc"></div>
+                    <figure><img class="img-responsive" src="../assets/img/exhibition_03.jpg"></figure>
                 </div>
                 <div class="col-lg-6 col-md-7 col-sm-9">
                     <div class="text">
-                        <p style="font-family:'Open Sans', sans-serif;">A designer, Ms Hae Mi&nbsp;Lee has donated a set of Korean traditional dress to the Kingston Museum to celebrate the occasion and to develop better relationship between Korean and local people of Kingston.&nbsp; </p>
-                    </div>
+                        <p>A designer, Ms Hae Mi&nbsp;Lee has donated a set of Korean traditional dress to the Kingston Museum to celebrate the occasion and to develop better relationship between Korean and local people of Kingston.&nbsp; </p><img class="img-responsive"
+                        src="../assets/img/logo_hanbok.png" width="20%"></div>
                 </div>
             </div>
         </div>
