Change main to coming soon page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="1; url=home/home.html">
     <script type="text/javascript">
-        window.location.href = "home/home.html"
+        window.location.replace("comingsoon/comingsoon.html");
     </script>
     <title>Page Redirection</title>
 </head>
