--- a/comingsoon/comingsoon.html
+++ b/comingsoon/comingsoon.html
@@ -25,7 +25,9 @@
   </head>
   <body>
   	<div class="container">
-   		<img src="asset/img/web_coming-soon.jpg" class="img-responsive"/>
+  		<div class`"row">
+   			<img src="asset/img/web_coming-soon.jpg" class="img-responsive center-block"/>
+   		</div>
 		</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
