Update Exhibition and Festival page

--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -72,14 +72,32 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h3><strong>DESIGNER, HAE MI LEE </strong></h3></div>
+                    <h3>
+    <strong>DESIGNER, HAE MI LEE </strong>
+    <img style="width:200px;height:auto;margin-top:-20px" src="../assets/img/exhibition_02.png" class="img-responsive pull-right" />
+</h3>
+                </div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
-                    <figure><img class="img-responsive" src="../assets/img/exhibition_03.jpg"></figure>
+                    <figure><img class="img-responsive" src="../assets/img/exhibition_04.jpg"></figure>
                 </div>
                 <div class="col-lg-6 col-md-7 col-sm-9">
                     <div class="text">
-                        <p>A designer, Ms Hae Mi&nbsp;Lee has donated a set of Korean traditional dress to the Kingston Museum to celebrate the occasion and to develop better relationship between Korean and local people of Kingston.&nbsp; </p><img class="img-responsive"
-                        src="../assets/img/logo_hanbok.png" width="20%"></div>
+                        <p>The set of Korean traditional dress (‘Hanbok’) is designed and donated by Ms Hae Mi Lee.&nbsp; Ms Lee is a Hanbok designer and has learnt the techniques from her mother in law who was a Hanbok and soft furnishing designer for over
+                            fifty years and&nbsp;is known to have designed soft furnishing/bedding for three of the past Korean presidents.Ms Lee was also trained under Mr&nbsp;Park Kwang Hoon who is a designated cultural intangible property of Korean
+                            traditional stitching and cloth making. &nbsp; </p>
+                        <p>Ms Lee gives new dimension to Hanbok by use of modern fabrics, patterns and cuts.&nbsp; She runs her own Hanbok brand, Saimdang by Lee Haemi and is also a senior lecturer at the Soongeui Women’s University. </p>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <figure><img class="img-responsive" src="../assets/img/exhibition_05.jpg"></figure>
+                        </div>
+                        <div class="col-md-4">
+                            <figure><img class="img-responsive" src="../assets/img/exhibition_06.jpg"></figure>
+                        </div>
+                        <div class="col-md-4">
+                            <figure><img class="img-responsive" src="../assets/img/exhibition_07.jpg"></figure>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
