--- a/festival/community.html
+++ b/festival/community.html
@@ -136,6 +136,22 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-6 col-lg-offset-2 col-md-7 col-md-offset-1 col-sm-9">
+                    <div class="text">
+                        <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>M</strong>USIC </h4>
+                        <h4 style="color:#1f2021;"><strong>Gunmin Kim</strong> </h4>
+                        <p>Gunmin Kim is an active member of ‘Artrash’ which is a Arts and Environmental project. He has been&nbsp;touring around Korea to promote the ‘Artrash since 2014. &nbsp;Gunmin as a singer, he was inspired by Folk and Band music,
+                            especially 60’s British band music and UK artists. His style can be compaired with Adele, Sam Smith, Birdy, Ed Sheeran. </p>
+                        <p> <a href="#"><span style="text-decoration: underline;">www.artrash.org</span> </a></p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-3">
+                    <div class="toc">
+                        <figure><img class="img-responsive" src="../assets/img/community-fest_05-1.png"></figure>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <h3>SAMULNORI_ BRIDGE </h3></div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
@@ -149,6 +165,24 @@
                             that brings together people of different worlds. </p>
                         <br/>
                         <p>Jeunghyun Choi, Yung-Kyung Choi, Gina-ha Golin, Seyoung Jeong </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <h3>ARIRANG GAYAGEUM ENSEMBLE </h3></div>
+                <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
+                    <div class="toc">
+                        <figure><img class="img-responsive" src="../assets/img/community-fest_07.png"></figure>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-7 col-sm-9">
+                    <div class="text">
+                        <p>May 2017 Performance at the Parents Day event organised by the Korean Senior Association UKNovember 2016 Invited performance at the National Unification Advisory Council in the UK event,October 2016 Invited performance at the Korean
+                            Cultural Day eventOctober 2016 Invited performance at the Burlington schoolAugust 2016 Invited performance at the Korean Information Centre graduate ceremony, Kingston CouncilJune 2016 Invited performance at the Refugee Action
+                            event </p>
+                        <br/>
+                        <p>Soonhee Ji, Myeong-Sook Kim, Mi Ok Hong, Hyung-Su Lim, Hoja Sohn, Myeongsuk Yoon </p>
                     </div>
                 </div>
             </div>
@@ -192,20 +226,43 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3"></div>
+                <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
+                    <div class="toc">
+                        <figure><img class="img-responsive" src="../assets/img/community-fest_09.png"></figure>
+                    </div>
+                </div>
                 <div class="col-lg-6 col-md-7 col-sm-9">
                     <div class="text">
                         <h4 style="font-family:Armata, sans-serif;color:#eb4221;">CHEF </h4>
                         <h4 style="color:#1f2021;"><strong>Sharky Yoon</strong> </h4>
                         <div>
                             <p>Sharky Yoon is the managing director of Mr.Kimchi and a Korean food developer in the UK. Mr.Kimchi is a premium Kimchi brand launced in 2013 and best known for providing customers with healthy, tasty and fresh kimchi in the
-                                UK. </p><img class="img-responsive"></div>
+                                UK. </p><img class="img-responsive" src="../assets/img/community-fest_10.jpg" style="width:100px;"></div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="color:#055ada;">
                     <h2 style="font-family:Armata, sans-serif;"><strong>P</strong>ARTICIPATION </h2></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_06.jpg">
+                    <p>They will be boys and girls strutting the catwalk, with originals outfits made by recyclable goods- showing the collision of fashion and rubbish for the public to enjoy. ‘ArtTrash’ is created by Seyoung Jang, who established ‘ArtTrash’
+                        based in Gwanak-Gu. The artist will be working along with the Environmental Department of Kingston Council, which works towards ‘waste 0’ Scheme. This show is to inspire the youth as well as the old to see the beauty within rubbish
+                        and to put it into good used, as in these day and age we are used to wasting so much! where are all these things can be put to good and create something beautiful and memorable. This show reflects that!&nbsp; </p>
+                    <p>We encourage everyone to join us in this movement, by collecting any trash/rubbish, that they see throughout the event and bring it along to the ‘Market Place’ where it will be your turn into your own Art Trash done by the locals!
+                        The rubbish you bring to the ‘Market Palace’ will be turned into An Art form. The installation work will be presented at the Market Place! Children are welcome to join too! &nbsp;As the rubbish, you give can be used as a token
+                        in exchange for a face painting or education programmes on the day!&nbsp;Let’s Get Arty!&nbsp; </p><a href="#">www.artrash.org </a></div>
+                <div class="col-lg-4 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_05.jpg">
+                    <p>Players aim to keep a heavily weighted shuttlecock (Jaegi) in the air for as long as possible using their bodies except for their hands. (suitable 5+)&nbsp; </p>
+                    <p>Jegichagi is a&nbsp;<a href="https://en.wikipedia.org/wiki/Korea" target="_blank">Korean</a> traditional outdoor&nbsp;<a href="https://en.wikipedia.org/wiki/Game" target="_blank">game</a> in which players kick a paper&nbsp;jegi&nbsp;into
+                        the air and attempt to keep it aloft. A&nbsp;jegi&nbsp;is similar to a&nbsp;<a href="https://en.wikipedia.org/wiki/Shuttlecock" target="_blank">shuttlecock</a>, and is made from paper wrapped around a small&nbsp;<a href="https://en.wikipedia.org/wiki/Coin"
+                        target="_blank">coin</a>.In Korea, children usually play alone or with friends in winter seasons, especially on&nbsp;<a href="https://en.wikipedia.org/wiki/Korean_New_Year" target="_blank">Lunar New Year</a>. Briefly explaining
+                        the rules, the player kicks a&nbsp;jegi&nbsp;up in the air and keeps on kicking to prevent from falling to the ground. In a one-to-one game, a player with the most number of consecutive kicks wins. In a group game, the players
+                        stand in a circle, and take turns kicking the Jegi. Players who fail to kick the&nbsp;jegi&nbsp;upon receiving it and let it drop to the ground lose. As a penalty, the loser tosses the&nbsp;jegi&nbsp;at the winner so that he can
+                        kick it as he wishes. When the loser catches the&nbsp;jegi&nbsp;back with his hands, the penalty ends and he can rejoin the game.&nbsp;This has developed, and people combined two or three materials and made new ways of playing&nbsp;jegichagi.
+                        Though the game was traditionally mostly played in&nbsp;<a href="https://en.wikipedia.org/wiki/Winter" target="_blank">winter</a>, it has become a year-round game.&nbsp; </p>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_01.jpg">
@@ -216,7 +273,10 @@
                     <p>Craft Stall (suitable 5+)
                         <br/>Make a lotus lantern using a recycled cofffee cup and Korean paper.&nbsp; </p>
                     <h6 style="color:#eb4221;">* Free, drop in, children must be with an adult at all times *&nbsp; </h6>
-                    <h5>by Buddhist artist,&nbsp;Beob Jeon </h5></div>
+                    <h5>by Buddhist artist,&nbsp;Beob Jeon </h5>
+                    <p>Since 20010, Beob Jeon, a Buddhist artist, has been a very active member of Korean Artist Association in the UK and participated in various exhibition in Korea and the UK. She won prize from Grand Art Exhibition of Korean Buddhism
+                        and has a license holder of painting of Cultural Assets Technician. </p>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_03.jpg">
@@ -246,25 +306,6 @@
                     </ul>
                     <p> </p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_05.jpg">
-                    <p>Players aim to keep a heavily weighted shuttlecock (Jaegi) in the air for as long as possible using their bodies except for their hands. (suitable 5+)&nbsp; </p>
-                    <p>Jegichagi is a&nbsp;<a href="https://en.wikipedia.org/wiki/Korea" target="_blank">Korean</a> traditional outdoor&nbsp;<a href="https://en.wikipedia.org/wiki/Game" target="_blank">game</a> in which players kick a paper&nbsp;jegi&nbsp;into
-                        the air and attempt to keep it aloft. A&nbsp;jegi&nbsp;is similar to a&nbsp;<a href="https://en.wikipedia.org/wiki/Shuttlecock" target="_blank">shuttlecock</a>, and is made from paper wrapped around a small&nbsp;<a href="https://en.wikipedia.org/wiki/Coin"
-                        target="_blank">coin</a>.In Korea, children usually play alone or with friends in winter seasons, especially on&nbsp;<a href="https://en.wikipedia.org/wiki/Korean_New_Year" target="_blank">Lunar New Year</a>. Briefly explaining
-                        the rules, the player kicks a&nbsp;jegi&nbsp;up in the air and keeps on kicking to prevent from falling to the ground. In a one-to-one game, a player with the most number of consecutive kicks wins. In a group game, the players
-                        stand in a circle, and take turns kicking the Jegi. Players who fail to kick the&nbsp;jegi&nbsp;upon receiving it and let it drop to the ground lose. As a penalty, the loser tosses the&nbsp;jegi&nbsp;at the winner so that he can
-                        kick it as he wishes. When the loser catches the&nbsp;jegi&nbsp;back with his hands, the penalty ends and he can rejoin the game.&nbsp;This has developed, and people combined two or three materials and made new ways of playing&nbsp;jegichagi.
-                        Though the game was traditionally mostly played in&nbsp;<a href="https://en.wikipedia.org/wiki/Winter" target="_blank">winter</a>, it has become a year-round game.&nbsp; </p>
-                </div>
-                <div class="col-lg-4 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_06.jpg">
-                    <p>They will be boys and girls strutting the catwalk, with originals outfits made by recyclable goods- showing the collision of fashion and rubbish for the public to enjoy. ‘ArtTrash’ is created by Seyoung Jang, who established ‘ArtTrash’
-                        based in Gwanak-Gu. The artist will be working along with the Environmental Department of Kingston Council, which works towards ‘waste 0’ Scheme. This show is to inspire the youth as well as the old to see the beauty within rubbish
-                        and to put it into good used, as in these day and age we are used to wasting so much! where are all these things can be put to good and create something beautiful and memorable. This show reflects that!&nbsp; </p>
-                    <p>We encourage everyone to join us in this movement, by collecting any trash/rubbish, that they see throughout the event and bring it along to the ‘Market Place’ where it will be your turn into your own Art Trash done by the locals!
-                        The rubbish you bring to the ‘Market Palace’ will be turned into An Art form. The installation work will be presented at the Market Place! Children are welcome to join too! &nbsp;As the rubbish, you give can be used as a token
-                        in exchange for a face painting or education programmes on the day!&nbsp;Let’s Get Arty!&nbsp; </p><a href="#">www.artrash.org </a></div>
             </div>
         </div>
     </div>
