Adjust community fest page [Phase#2]

--- a/festival/community.html
+++ b/festival/community.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h1 class="text-left" style="color:#eb4221;font-family:Armata, sans-serif;"><strong>C</strong>OMMUNITY FESTIVAL</h1>
+                        <h1 style="color:#eb4221;"><strong>C</strong>OMMUNITY FESTIVAL</h1>
                         <p style="color:rgb(86,88,91);font-size:16px;">The Community Fest will represent some of the most varied entertainment from Korea’s traditions to the latest culture by both Koreans from North and South as well as British local artists along with educational programme for everyone.
                             </p>
                         <p style="color:rgb(86,88,91);font-size:16px;">The world premiere of Gilnori 2017 will starts the Fest with a big bang to give an insight of what is to come within the Fest. It represents an arts and environmental project called ‘Artrash’ from Korea to shares our concern about
@@ -60,8 +60,17 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-3 col-lg-offset-3 col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1 col-xs-6" style="color:#055ada;background-color:#e4e4e4;">
+                    <h4 class="text-center"><a href="#performance"><strong>PERFORMANCE </strong></a></h4></div>
+                <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6" style="color:#055ada;background-color:#e4e4e4;">
+                    <h4 class="text-center"><a href="#participation"><strong>PARTICIPATION </strong></a></h4></div>
+            </div>
+            <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="color:#055ada;">
-                    <h2 style="font-family:Armata, sans-serif;"><strong>PERFORMANCE </strong></h2></div>
+                    <div id="performance">
+    <h2><strong>PERFORMANCE</strong></h2>
+</div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -80,6 +89,11 @@
                             music and electronic music. The music has been carefully selected, knowing it will be heard by many people of all ages. It will have a tasteful taste that will be easy to enjoy to.We are moving a little bit away from the traditional
                             Korean style of Gilnori and heading more towards the Morden style aspect into our work, incorporating the two styles together, to bring something to remember, but for all generations to appeal to our parade. </p>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div style="height:2px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
@@ -138,7 +152,7 @@
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-2 col-md-7 col-md-offset-1 col-sm-9">
                     <div class="text">
-                        <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>M</strong>USIC </h4>
+                        <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>MUSIC </strong></h4>
                         <h4 style="color:#1f2021;"><strong>Gunmin Kim</strong> </h4>
                         <p>Gunmin Kim is an active member of ‘Artrash’ which is a Arts and Environmental project. He has been&nbsp;touring around Korea to promote the ‘Artrash since 2014. &nbsp;Gunmin as a singer, he was inspired by Folk and Band music,
                             especially 60’s British band music and UK artists. His style can be compaired with Adele, Sam Smith, Birdy, Ed Sheeran. </p>
@@ -149,6 +163,11 @@
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/community-fest_05-1.png"></figure>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div style="height:2px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
@@ -166,6 +185,11 @@
                         <br/>
                         <p>Jeunghyun Choi, Yung-Kyung Choi, Gina-ha Golin, Seyoung Jeong </p>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div style="height:2px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
@@ -188,6 +212,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div style="height:2px;background-color:#eb4221;"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <h3>KOREAN MARTIAL ARTS_HAPKIDO </h3></div>
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
@@ -200,9 +229,19 @@
                             situations, they allow the defender to gain complete control with minimal effort and without aggression or injuries to the attacker. The art of Hapkido has the most varied types of techniques and offers extensive training in
                             many disciplines, including correct breathing techniques, kicking techniques, pressure points, joint-locking, submissions, throwing techniques, weaponry (including the long staff, sword, cane, fan, short staff, middle staff,
                             belt and rope), and falling techniques that are vital for self-protection in real-life situations. </p>
-                        <p> <a href="#"><span style="text-decoration: underline;">School of Korean Martial Arts</span> </a>
-                            <br/><a href="#">www.skma.co.uk </a></p>
+                        <p>SKMA (School of Korean Martial Arts) is the authentic Korean Martial Arts School led by Korean Instructor, Master Daeman Sung (6th Dan Black belt and Ex Korean Special Forces). Our vast syllabus offers something for everyone –
+                            from those dedicated to mastering their abilities in a martial art, to those who simply want to keep fit.&nbsp; </p>
+                        <p>We provide quality personal development training in Korean Martial Arts to include Hapkido, Yongmudo, Gumdo (Swordsmanship) and Women’s self-defence. Our vast syllabus is beneficial and ideal for every one of all ages and abilities,
+                            and we offer flexible programmes which are specifically designed to cater for your needs.&nbsp;We hold Martial Arts &amp; Self-defence classes in, Wandsworth (London), Worcester Park (Surrey), New Haw (Surrey), Guildford (Surrey).
+                            </p>
+                        <p><a href="#">www.skma.co.uk </a>
+                            <br/><a href="#"><span style="text-decoration: underline;">info@skma.co.uk</span> </a></p>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div style="height:2px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
@@ -228,22 +267,39 @@
             <div class="row">
                 <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
-                        <figure><img class="img-responsive" src="../assets/img/community-fest_09.png"></figure>
+                        <figure><img class="img-responsive"></figure>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-7 col-sm-9">
-                    <div class="text">
-                        <h4 style="font-family:Armata, sans-serif;color:#eb4221;">CHEF </h4>
-                        <h4 style="color:#1f2021;"><strong>Sharky Yoon</strong> </h4>
-                        <div>
-                            <p>Sharky Yoon is the managing director of Mr.Kimchi and a Korean food developer in the UK. Mr.Kimchi is a premium Kimchi brand launced in 2013 and best known for providing customers with healthy, tasty and fresh kimchi in the
-                                UK. </p><img class="img-responsive" src="../assets/img/community-fest_10.jpg" style="width:100px;"></div>
+                <div class="col-lg-4 col-md-5 col-sm-7">
+                    <div>
+                        <div class="text">
+                            <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>CHEF </strong></h4>
+                            <h4 style="color:#1f2021;"><strong>Sharky Yoon</strong> </h4>
+                            <div>
+                                <p>Sharky Yoon is the managing director of Mr.Kimchi and a Korean food developer in the UK. Mr.Kimchi is a premium Kimchi brand launced in 2013 and best known for providing customers with healthy, tasty and fresh kimchi in
+                                    the UK. </p>
+                            </div>
+                        </div>
+                        <img src="../assets/img/community-fest_10.jpg" class="img-responsive pull-right" style="width:100px;" />
                     </div>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2">
+                    <div style="float:none; display:table-cell;">
+    <img src="../assets/img/community-fest_09.png" class="img-responsive" />
+</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div style="height:2px;background-color:#eb4221;"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="color:#055ada;">
-                    <h2 style="font-family:Armata, sans-serif;"><strong>P</strong>ARTICIPATION </h2></div>
+                    <div id="participation">
+    <h2><strong>PARTICIPATION</strong></h2>
+</div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_06.jpg">
