Change general font

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -62,7 +62,7 @@
                     <p class="lead"><img src="../assets/img/logo_facebook.png" style="width:50px;margin:0px;margin-right:10px;margin-left:0px;"><img src="../assets/img/logo_insta.png" style="width:50px;"></p>
                 </div>
                 <div class="col-lg-4 col-md-5">
-                    <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:Armata, sans-serif;"><strong>CONTACT</strong></h2>
+                    <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans', sans-serif;"><strong>CONTACT</strong></h2>
                     <p class="lead" style="font-size:14px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
                     <div class="form-group has-success has-feedback">
     <div class="fb-comments" data-href="http://kbce.org.uk" data-width="100%" data-numposts="5"></div>
