--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h1 class="text-left" style="color:#eb4221;font-family:Armata, sans-serif;"><strong>EXIHIBITION 'DOL'</strong></h1></div>
+                        <h1 class="text-left" style="color:#eb4221;"><strong>EXIHIBITION 'DOL'</strong></h1></div>
                 </div>
             </div>
             <div class="row">
