--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -55,15 +55,31 @@
     <div>
         <div class="container">
             <div class="row">
+                <div class="col-md-12">
+                    <div></div>
+                </div>
                 <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1" style="padding:20px;"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;margin-bottom:5px;">
-                    <p class="lead" style="font-size:24px;">is the newly founded charity organisation set up to organise cultural and educational activities to promote Korean culture in the UK, especially in the Kingston area.The aims and objectives are to help to understand each other’s culture,
-                        to exchange and embrace each other’s culture so that we are happier together in the neighborhood and to lead to more cooperation between the communities through artistic collaboration. </p>
-                    <p class="lead" style="font-size:24px;">Follow us on our Social media platforms</p>
-                    <p class="lead"><img src="../assets/img/logo_facebook.png" style="width:50px;margin:0px;margin-right:10px;margin-left:0px;"><img src="../assets/img/logo_insta.png" style="width:50px;"></p>
+                    <p class="lead" style="font-size:18px;">The Korean British Cultural Exchange is a newly-founded non-profit organisation set up to organise cultural and educational activities to promote Korean culture in the UK. The aim is to help better understand each other and build a
+                        better community together through artistic collaboration and creativity. </p>
+                    <p class="lead" style="font-size:18px;">KBCE is organised by volunteers and always welcome to work with local artists and people. If you like to have more information about the Korean British Cultural Exchange and its activities, please send us an email to&nbsp;<a href="mailto:kbce@kbce.org.uk"
+                        target="_self"><span style="text-decoration: underline;">kbce@kbce.org.uk</span></a> </p>
+                    <p class="lead" style="font-size:18px;">Follow us on our Social media platforms</p>
+                    <div class="table-row" style="vertical-align: middle;padding-bottom:10px">
+    <a href="https://www.facebook.com/kbce.official">
+        <img src="../assets/img/logo_facebook.png" style="float:middle; width:40px;margin:0px;margin-right:10px;margin-left:0px;" />
+        <h5 style="display: inline; vertical-align: middle;">Korean British Cultural Exchange</h5>
+    </a>
+</div>
+                    <div class="table-row" style="vertical-align: middle;">
+    <a href="https://www.instagram.com/_kbce">
+        <img src="../assets/img/logo_insta.png" style="float:middle; width:40px;margin:0px;margin-right:10px;margin-left:0px;" />
+        <h5 style="display: inline; vertical-align: middle;">_KBCE</h5>
+    </a>
+</div>
                 </div>
                 <div class="col-lg-4 col-md-5">
                     <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans', sans-serif;"><strong>CONTACT</strong></h2>
-                    <p class="lead" style="font-size:14px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
+                    <p class="lead" style="font-size:16px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
                     <div class="form-group has-success has-feedback">
     <div class="fb-comments" data-href="http://kbce.org.uk" data-width="100%" data-numposts="5"></div>
 </div>
