--- a/home/home.html
+++ b/home/home.html
@@ -75,41 +75,36 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-md-12">
+                    <h1> </h1></div>
+            </div>
+            <div class="row">
                 <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-1">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2 style="font-family:Actor, sans-serif;">Facebook </h2></div>
+                            <h3 class="text-center" style="font-family:Actor, sans-serif;">SPECIAL THANKS</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12">
-                            <div class="fb-page" data-href="https://www.facebook.com/KBCE.Official" data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-    <blockquote cite="https://www.facebook.com/KBCE.Official" class="fb-xfbml-parse-ignore">
-        <a href="https://www.facebook.com/KBCE.Official">KBCE</a>
-    </blockquote>
-</div>
-                        </div>
+                        <div class="col-md-12"><img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;"><img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;"><img src="../assets/img/logo_hanbok.png" width="140px" style="margin:10px;"><img src="../assets/img/exhibition_02.png" width="170px"
+                            style="margin:10px;"></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-1">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2 style="font-family:Actor, sans-serif;">Instagram </h2></div>
+                            <h3 class="text-center" style="font-family:Actor, sans-serif;">PARTNERS </h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12"></div>
+                        <div class="col-md-12"><img src="../assets/img/logo_artrash.png" width="100px" style="margin:10px;"></div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h1> </h1></div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-12">
                     <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-    #mc_embed_signup{border: 2px; border-style: solid; border-radius: 5px; border-color: #eb4221; background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    #mc_embed_signup{border: 1px; border-style: solid; border-radius: 5px; border-color: #eb4221; background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
     /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
