--- a/home/home.html
+++ b/home/home.html
@@ -55,7 +55,7 @@
     <div>
         <div class="container post">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-9 col-md-offset-1">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="carousel slide" data-ride="carousel" id="carousel-1" style="width:940;">
                         <div class="carousel-inner" role="listbox">
                             <div class="item active"><img class="img-responsive" src="../assets/img/main/home_sliding-banner_01.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
@@ -79,7 +79,7 @@
                     <h1> </h1></div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-1">
+                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1">
                     <div class="row">
                         <div class="col-md-12">
                             <h3 class="text-center" style="font-family:Actor, sans-serif;">SPECIAL THANKS</h3></div>
@@ -89,7 +89,7 @@
                             style="margin:10px;"></div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-1">
+                <div class="col-lg-4 col-md-5">
                     <div class="row">
                         <div class="col-md-12">
                             <h3 class="text-center" style="font-family:Actor, sans-serif;">PARTNERS </h3></div>
@@ -100,7 +100,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-12">
+                <div class="col-md-12">
+                    <h1> </h1></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10">
                     <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
